2002-11-14  Darin Adler  <darin@apple.com>

        * English.lproj/Localizable.strings: Updated to include the new
	error messages that Maciej just added. I wonder what effect this
	will have if we see those errors in Alex-32?

=== Alexander-32 ===

2002-11-14  Don Melton  <gramps@apple.com>

        * WebView.subproj/WebControllerPolicyDelegate.h:

	Added missing semi-colon in definition of WebPolicyDecisionListener to
	fix build error.

2002-11-14  Maciej Stachowiak  <mjs@apple.com>

	Combined file URL policy with content policy. We don't actually
	bother to ask earlier for file URLs yet, since that will make
	things more complicated.
	
        * Misc.subproj/WebKitErrors.h:
        * WebView.subproj/WebControllerPolicyDelegate.h:
        * WebView.subproj/WebDefaultPolicyDelegate.m:
        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _handleUnimplementablePolicy:errorCode:forURL:]):
        (-[WebFrame _continueAfterNavigationPolicyForRequest:dataSource:]):
        * WebView.subproj/WebMainResourceClient.h:
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient stopLoadingAfterContentPolicy]):
        (-[WebMainResourceClient handle:didReceiveResponse:]):
        * WebView.subproj/WebView.m:
        (+[WebView initialize]):

2002-11-14  Darin Adler  <darin@apple.com>

	- fixed 3099240 -- REGRESSION: repro assert d->m_doc->parsing

	Make the reload flag pass across the bridge.

        * WebView.subproj/WebDataSourcePrivate.m: (-[WebDataSource _commitIfReady]):
	Pass a reload flag, based on the load type, to the bridge.
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _loadURL:loadType:triggeringEvent:isFormSubmission:]): Pass a
	reload flag of NO in the anchor case. Preserve reload load types even when
	doing client redirects (have to talk with Trey about this tomorrow).

2002-11-14  Darin Adler  <darin@apple.com>
